Fixed login and sign up issues when error is thrown. The logged user is now visible in the ranking table.

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -15,3 +15,8 @@ input[type="number"] {
   width: 60px;
   text-align: center;
 }
+
+.ranking-table {
+  height: 450px;
+  overflow: scroll;
+}
